tests/lit/tcheck/immutable_06.asl
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

config CFG : Integer := 1;

function F()
begin
    CFG := 2;
// CHECK: Type error: assignment to immutable variable `CFG` declared at
end
